# lavascope

./: .gitignore  CHANGELOG.md  LICENSE  README.md  bun.lockb  cliff.toml  eslint.config.js  eslint.config.ts  index.html  lingui.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tailwind.config.js  tsconfig.base.json  tsconfig.json  tsr.config.json  vite.config.ts
.github/: dependabot.yml
.github/workflows/: create-release-branch.yml  release.yml  test-build-scripts.yml  test-build.yml
CI/scripts/: artifact_list_move_rename.py  get_commit_sha_short.py  update-release-link.py  update_release_link.py
backend/: .gitignore  Cargo.toml  tauri.conf.json
backend/apps/lavascope-tauri/: .gitignore  Cargo.toml  tauri.conf.json  tauri.macos.conf.json
backend/apps/lavascope-tauri/capabilities/: desktop.json
backend/apps/lavascope-tauri/src/: lib.rs  main.rs
backend/apps/lavascope-tauri/src/app/: builder.rs  commands.rs  event_handler.rs  mod.rs
backend/apps/lavascope-tauri/src/app/tray/menu/: mod.rs
backend/crates/lavascope-i18n/: .gitignore  Cargo.toml  build.rs
backend/crates/lavascope-i18n/locales/: app.yml
backend/crates/lavascope-i18n/src/: backend.rs  lib.rs  locale.rs
backend/crates/lavascope-logging/: Cargo.toml
backend/crates/lavascope-logging/src/: builder.rs
backend/crates/lavascope-state/: Cargo.toml
backend/crates/lavascope-state/src/: menu.rs  window.rs
backend/crates/lavascope-tray/: Cargo.toml
backend/crates/lavascope-tray/src/: builder.rs  error.rs  event.rs  lib.rs
backend/crates/lavascope-tray/src/menu/: builder.rs  event.rs
backend/lavascope-i18n/: Cargo.toml
backend/lavascope-i18n/src/: lib.rs
backend/lavascope-tauri/: .gitignore  Cargo.toml  tauri.conf.json
backend/lavascope-tauri/capabilities/: desktop.json
backend/lavascope-tauri/src/: main.rs
backend/lavascope-tauri/src/app/: commands.rs  mod.rs
backend/lavascope-tauri/src/app/tray/: event.rs  mod.rs
backend/lavascope-tauri/src/app/tray/menu/: builder.rs
backend/lavascope-tauri/src/utils/: mod.rs  translator.rs
backend/locales/: app.yml
backend/src/: lib.rs
backend/src/app/: builder.rs  commands.rs  mod.rs  state.rs  translator.rs  tray.rs
backend/src/app/tray/: builder.rs  error.rs  event.rs  mod.rs
backend/src/app/tray/menu/: builder.rs  event.rs  i18n.rs  mod.rs
backend/src/utils/: translator.rs
frontend/apps/ui/: package.json  tsconfig.json  vite.config.ts
frontend/apps/ui/src/: main.tsx  routeTree.gen.ts
frontend/apps/web/: .gitignore  index.html  lingui.config.ts  package.json  tsconfig.json  vite.config.ts
frontend/apps/web/src/: AppError.tsx  main.tsx  vite-env.d.ts
frontend/libs/fetch/: package.json  tsconfig.json
frontend/libs/fetch/src/: fetch.ts
frontend/libs/hook/: package.json  tsconfig.json
frontend/libs/i18n/: lingui.config.ts  package.json  tsconfig.json
frontend/libs/log/: package.json  tsconfig.json
frontend/libs/notification/: package.json
frontend/libs/platform/: package.json  tsconfig.json
frontend/libs/store/: package.json  tsconfig.json
frontend/libs/tailwind/: package.json  tsconfig.json
frontend/libs/ts-config/: base.json  package.json  vite.json
frontend/libs/ui/: components.json  package.json  tsconfig.json
frontend/libs/vultr/: package.json  tsconfig.json
scripts/: android_keystore.py  build_info.py  path_const.py
scripts/apps/lavascope-cli/: main.py  pyproject.toml
scripts/common/: path_const.py
scripts/libs/lavascope_cli_lib/: pyproject.toml
scripts/libs/lavascope_cli_lib/src/lavascope_cli_lib/: __init__.py  android_keystore.py  build_info.py  path_const.py
scripts/libs/lavascope_cli_lib/src/lavascope_cli_lib/android_keystore/: generate_keystore.py  generate_properties.py
scripts/libs/lavascope_cli_lib/tests/: test_android_keystore.py  test_build_info.py  test_path_const.py
src/: App.tsx  AppError.tsx  db.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.ios.conf.json  tauri.windows.conf.json
src-tauri/build-config/: tauri.android.conf.json  tauri.ios.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/app/: commands.rs  translator.rs  tray.rs
src-tauri/src/utils/: translator.rs
src/assets/css/: tailwind.css
src/components/: IPEndpointsTable.tsx  MyIPTable.tsx  Navbar.tsx  ProxySwitch.tsx  TauriTitleBar.tsx
src/components/Dev/: JotaiDevTools.tsx  TanStackRouterDevTools.tsx
src/components/Settings/: DevPanelSection.tsx  ProxySection.tsx  SecretsSection.tsx  Section.tsx
src/hooks/: clipboard.ts  fetch.ts  vultr.ts
src/hooks/Firewall/: groups.ts  rules.ts
src/lib/vultr/: VultrAPI.ts  error.ts  index.ts  types.ts
src/locales/: en.po  zh-Hant.po  zh.po
src/pages/: Rules.tsx  Settings.tsx
src/routes/: __root.tsx  _app.tsx  index.tsx  my-ip.tsx  settings.tsx
src/routes/_app/: index.tsx
src/routes/groups/: $id.tsx  index.tsx
src/store/: environment.ts  ip.ts  language.ts  screen.ts  settings.ts  theme.ts
src/store/firewall/: firewall.ts  groups.ts  rules.ts
src/utils/: compatibility.ts  i18n.ts  log.ts  persister.ts
(+243 files in other folders)
