[workspace]
members = ["apps/*", "crates/*"]
resolver = "3"

[workspace.dependencies]
lavascope-i18n = { path = "crates/lavascope-i18n" }
lavascope-tray = { path = "crates/lavascope-tray" }
lavascope-state = { path = "crates/lavascope-state" }
lavascope-logging = { path = "crates/lavascope-logging" }

tauri = "2.8.5"
tauri-build = "2.4.1"
tauri-plugin-shell = "2.3.1"
tauri-plugin-notification = "2.3.1"
tauri-plugin-http = "2.5.2"
tauri-plugin-clipboard-manager = "2.3.0"
tauri-plugin-os = "2.3.2"
tauri-plugin-log = "2.7.0"
tauri-plugin-autostart = "2.5.0"
tauri-plugin-single-instance = "2.3.4"
serde = "1"
serde_json = "1"
log = "0.4"
thiserror = "2.0.11"
rust-i18n = "3.1.5"

[workspace.metadata.i18n]
available-locales = ["en", "zh", "zh-Hant"]
default-locale = "en"
load-path = "locales"
