[package]
name = "lavascope-tauri"
version = "0.1.0"
edition = "2024"
description = "LavaScope"
authors = ["Feiyu Zheng <feiyuzheng98@gmail.com>"]

[lib]
crate-type = ["rlib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { workspace = true, features = [] }

[dependencies]
rust-i18n.workspace = true
lavascope-i18n.workspace = true

tauri = { workspace = true, features = ["tray-icon"] }
tauri-plugin-shell.workspace = true
tauri-plugin-notification.workspace = true
tauri-plugin-http.workspace = true
tauri-plugin-clipboard-manager.workspace = true
tauri-plugin-os.workspace = true
tauri-plugin-log.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
log.workspace = true
thiserror.workspace = true

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-autostart.workspace = true
tauri-plugin-single-instance.workspace = true
