[project]
name = "lavascope-cli-lib"
version = "0.1.0"
description = "Shared library for Lavascope build scripts and CLI"
readme = "README.md"
authors = [{ name = "ChaserZ98", email = "feiyuzheng98@gmail.com" }]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"
